# django-program

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  SECURITY.md  conference.example.toml  plan.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: BUG.yml  DOCS.yml  FEATURE.yml  config.yml
.github/workflows/: cd.yml  ci.yml  docs.yml  pr-title.yml  pretalx-schema-sync.yml  publish-pretalx-client.yml  publish.yml
docs/: admin-reports.md  badge-generation.md  changelog.md  conf.py  configuration.md  index.rst  management-dashboard.md  pretalx-integration.md  programs-activities.md  registration-flow.md
docs/_static/: custom.css
docs/api/: index.rst  modules.rst
docs/getting-started/: index.rst  installation.md  quickstart.md
examples/: manage.py  seed.py  settings.py  urls.py
schemas/pretalx/: schema.sha256
scripts/pretalx/: fetch_schema.py  generate_client.py  generate_http_client.py  validate_schema.py
src/django_program/: __init__.py  __metadata__.py  config_loader.py  context_processors.py  features.py  settings.py
src/django_program/conference/: __init__.py  admin.py  apps.py  models.py  signals.py
src/django_program/conference/management/: __init__.py
src/django_program/conference/migrations/: 0001_initial.py  0002_encrypt_stripe_fields.py  0003_conference_address.py  0004_add_feature_flags.py  0004_add_total_capacity.py  0005_merge_0004_add_feature_flags_0004_add_total_capacity.py  0006_add_budget_fields.py  0007_expensecategory_expense.py  0008_kpitargets.py  0009_featureflags_visa_letters_enabled.py  0010_add_qbo_fields.py  0010_alter_conference_options.py
src/django_program/manage/: __init__.py  apps.py  forms.py  forms_bulk_purchases.py  forms_overrides.py  forms_vouchers.py  reports.py  reports_analytics.py  urls.py  urls_analytics.py  urls_bulk_purchases.py  urls_financial.py  urls_overrides.py  urls_purchase_orders.py  urls_reports.py  urls_vouchers.py  views.py  views_analytics.py  views_bulk_purchases.py  views_checkin.py  views_financial.py  views_letters.py  views_overrides.py  views_purchase_orders.py  views_reports.py  views_terminal.py  views_vouchers.py
src/django_program/pretalx/: __init__.py  admin.py  apps.py  client.py  models.py  sync.py  urls.py  views.py
src/django_program/pretalx/management/: __init__.py
src/django_program/pretalx/migrations/: 0001_initial.py  0002_room_alter_scheduleslot_room_alter_talk_room.py  0003_add_scheduleslot_unique_constraint.py  0004_talk_tags.py  0005_alter_room_unique_together_alter_room_pretalx_id_and_more.py  0006_talkoverride_submissiontypedefault.py  0007_alter_talkoverride_conference_and_more.py  0008_alter_roomoverride_conference_and_more.py  0009_sessionrating.py
src/django_program/pretalx/profiles/: __init__.py  base.py  default.py  pyconus.py  resolver.py
src/django_program/programs/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
src/django_program/programs/migrations/: 0001_initial.py  0002_alter_activity_activity_type.py  0003_activity_pretalx_submission_type_activity_room_and_more.py  0004_travel_grant_pycon_model.py  0005_alter_travelgrant_application_type_paymentinfo_and_more.py  0006_travelgrant_disbursed_amount_and_more.py  0007_alter_receipt_receipt_file.py  0008_alter_activitysignup_unique_together_and_more.py  0009_alter_activity_options_activity_organizers.py  0010_survey_surveyresponse.py  0011_alter_travelgrant_options.py
src/django_program/registration/: __init__.py  admin.py  apps.py  attendee.py  badge.py  checkin.py  conditions.py  forms.py  letter.py  models.py  purchase_order.py  signal_handlers.py  signals.py  stripe_client.py  stripe_utils.py  terminal.py  urls.py  views.py  views_checkin.py  views_terminal.py  webhooks.py
src/django_program/registration/migrations/: 0001_initial.py  0002_fix_cartitem_on_delete.py  0003_stripeevent_payment_status_eventprocessingexception_and_more.py  0004_cartitem_registration_cartitem_unique_ticket_per_cart_and_more.py  0005_order_hold_expires_at_credit_remaining_amount.py  0006_attendee.py  0006_discountforcategory_discountforproduct_and_more.py  0007_alter_attendee_order.py  0008_merge_20260316_2026.py  0009_alter_discountforproduct_discount_value_and_more.py  0010_badge_portrait_defaults.py  0011_badge_background_image.py  0012_badge_fonts_banner_position.py  0013_alter_badgetemplate_accent_color_and_more.py  0014_order_utm_campaign_order_utm_medium_order_utm_source.py  (+7 more)
src/django_program/sponsors/: __init__.py  admin.py  apps.py  forms.py  models.py  services.py  signals.py  sync.py  urls.py  views.py
tests/: settings.py  test_config_loader.py  test_features.py  test_settings_config.py  urls.py
tests/test_conference/: test_admin.py  test_bootstrap_command.py
tests/test_examples/: test_example_app_integration.py
tests/test_manage/: test_analytics_reports.py  test_financial_views.py  test_forms.py  test_override_views.py  test_programs_views.py  test_purchase_order_views.py  test_report_views.py  test_sponsor_views.py  test_views.py  test_voucher_bulk_views.py
tests/test_pretalx/: test_admin_pretalx.py  test_client.py  test_models.py  test_overrides.py  test_profiles.py  test_sync.py  test_sync_command.py  test_views.py
tests/test_programs/: test_forms.py  test_models.py  test_utils.py  test_views.py
tests/test_registration/: test_attendee.py  test_badges.py  test_bootstrap_registration.py  test_capacity.py  test_cart_service.py  test_checkin.py  test_checkout_service.py  test_conditions.py  test_letters.py  test_model_properties.py  test_payment_service.py  test_purchase_orders.py  test_qbo_invoicing.py  test_refund_service.py  test_registration_tags.py  test_stripe_client.py  test_stripe_invoicing.py  test_stripe_models_admin_forms.py  test_stripe_utils.py  test_terminal.py  test_views.py  test_voucher_service.py  test_webhooks.py
tests/test_sponsors/: test_models.py  test_overrides.py  test_profiles.py  test_signals.py  test_sponsor_tags.py  test_sync.py  test_sync_command.py  test_views.py
(+178 files in other folders)
